# cookiecutter-hydro

./: Makefile  README.md  cookiecutter.json  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: main.yml
docs/: index.md  prompt_arguments.md  tutorial.md
docs/features/: cicd.md  publishing.md
hooks/: post_gen_project.py
tests/: test_cookiecutter.py
{{cookiecutter.project_name}}/: Makefile  README.md  pyproject.toml
{{cookiecutter.project_name}}/.devcontainer/: devcontainer.json
{{cookiecutter.project_name}}/.github/workflows/: main.yml  on-release-main.yml
{{cookiecutter.project_name}}/docs/: index.md
